Test img scaling fix on mobile

--- a/css/projectpagestyle.css
+++ b/css/projectpagestyle.css
@@ -339,8 +339,25 @@ footer hr
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 60%;
     }
+
+@media (max-width: 1000px)
+    {
+        .center
+        {
+            width: 78%;
+        }
+    }
+
+@media (max-width: 500px)
+    {
+        .center
+        {
+            width: 100%;
+        }
+    }
+
 figure
     {
         margin: 50px 50px;
